bug(plc4j/opcua): OPC-UA hardcodes RSA-OAEP for username tokens (AKA support username-password authentication)
Fixes: #2154